--- a/server/package.json
+++ b/server/package.json
@@ -4,10 +4,8 @@
   "description": "Backend for Caspometer expense tracking app",
   "main": "server.js",
   "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build",
-    "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "start": "node server.js",
+    "dev": "nodemon server.js"
   },
   "keywords": [
     "expense",
